simplify fitting code

--- a/notebooks/library_size.ipynb
+++ b/notebooks/library_size.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Choosing a library size"
+    "# Library size"
    ]
   },
   {
@@ -16,13 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import time\n",
     "import os\n",
-    "import pickle\n",
     "\n",
     "import pandas as pd\n",
     "import altair as alt\n",
@@ -34,12 +33,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have simulated noisy DMS data containing 30,000 variants. Each variant in this dataset contains 3 mutations on average measured at 3 different sera concentrations."
+    "We have simulated a noisy DMS library containing 30,000 variants measured at 3 different sera concentrations. The variants in this library were simulated to contain a Poisson-distributed number of mutations, with 3 mutations on average."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +193,7 @@
        "[90000 rows x 5 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,33 +218,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model with 500 variants was already fit.\n",
-      "Model with 1000 variants was already fit.\n",
-      "Model with 2500 variants was already fit.\n",
-      "Model with 5000 variants was already fit.\n",
-      "Model with 10000 variants was already fit.\n",
-      "Model with 20000 variants was already fit.\n"
+      "Fitting model on library with 1000 variants.\n",
+      "Fitting model on library with 2500 variants.\n",
+      "Fitting model on library with 5000 variants.\n",
+      "Fitting model on library with 10000 variants.\n",
+      "Fitting model on library with 20000 variants.\n",
+      "Fitting model on library with 30000 variants.\n"
      ]
     }
    ],
    "source": [
-    "library_sizes = [500, 1000, 2500, 5000, 10000, 20000]\n",
-    "os.makedirs('fit_polyclonal_models', exist_ok=True)\n",
-    "       \n",
-    "def fit_polyclonal(size):\n",
-    "    \"\"\"\n",
-    "    Fit `Polyclonal` model on a library with a specific mutation rate.\n",
-    "    Returns fit `Polyclonal` object.\n",
-    "    \"\"\"\n",
+    "library_sizes = [1000, 2500, 5000, 10000, 20000, 30000]\n",
+    "\n",
+    "# Store all fit models in a dictionary for future lookup\n",
+    "fit_models = {}\n",
+    "\n",
+    "for n in library_sizes:\n",
+    "    # key name for model\n",
+    "    model_string = f'{n}variants'\n",
+    "\n",
     "    poly_abs = polyclonal.Polyclonal(data_to_fit=noisy_data.groupby('concentration')\n",
-    "                                                           .apply(lambda x: x.sample(n=size, random_state=123))\n",
+    "                                                           .apply(lambda x: x.sample(n=n, random_state=123))\n",
     "                                                           .reset_index(drop = True),\n",
     "                                     activity_wt_df=pd.DataFrame.from_records(\n",
     "                                         [('1', 1.0),\n",
@@ -263,44 +263,9 @@
     "                                         ),\n",
     "                                     data_mut_escape_overlap='fill_to_data',\n",
     "                                 )\n",
-    "    start = time.time()\n",
+    "    print(f\"Fitting model on library with {n} variants.\")\n",
     "    poly_abs.fit()\n",
-    "    return poly_abs, time.time() - start\n",
-    "\n",
-    "# Store all fit models in a dictionary for future lookup\n",
-    "fit_models = {}\n",
-    "for size in library_sizes:\n",
-    "    # keys for models\n",
-    "    model_string = f'noisy_[0.25, 1, 4]conc_3muts_{size}vars'\n",
-    "    \n",
-    "    # if model has already been fit, load pickled model and add to fit_models. Otherwise, fit model.\n",
-    "    if os.path.exists(f'fit_polyclonal_models/{model_string}.pkl') is True:\n",
-    "        model = pickle.load(open(f'fit_polyclonal_models/{model_string}.pkl', 'rb'))\n",
-    "        fit_models.update({model_string : model})\n",
-    "        print(f\"Model with {size} variants was already fit.\")\n",
-    "    else:\n",
-    "        model, time_elapsed = fit_polyclonal(size)\n",
-    "        fit_models.update({model_string : model})\n",
-    "        pickle.dump(model, open(f'fit_polyclonal_models/{model_string}.pkl', 'wb'))\n",
-    "        print(f\"Model with {size} variants fit in {time_elapsed:.1f} seconds.\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Since we fit the full model previously, also load that and add to our fit models dictionary so we can compare below."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "full_model_string = f'noisy_[0.25, 1, 4]conc_3muts'\n",
-    "full_model = pickle.load(open(f'fit_polyclonal_models/{full_model_string}.pkl', 'rb'))\n",
-    "fit_models.update({f'{full_model_string}_30000vars' : full_model})"
+    "    fit_models.update({model_string : poly_abs})"
    ]
   },
   {
@@ -312,19 +277,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# add full model to library sizes to compare\n",
-    "library_sizes.append(30000)\n",
-    "\n",
     "all_corrs = pd.DataFrame({'epitope' : [], \n",
     "                          'correlation' : [], \n",
     "                          'num_variants' : []})\n",
     "\n",
     "for size in library_sizes:\n",
-    "    model = fit_models[f'noisy_[0.25, 1, 4]conc_3muts_{size}vars']\n",
+    "    model = fit_models[f'{size}variants']\n",
     "\n",
     "    mut_escape_pred = (\n",
     "        pd.read_csv('RBD_mut_escape_df.csv')\n",
@@ -351,19 +313,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-69816ee200e94956ba1f04d3f933d8df\"></div>\n",
+       "<div id=\"altair-viz-5b7fdbfabf0f43f7a801e09e02344cbf\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-69816ee200e94956ba1f04d3f933d8df\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-69816ee200e94956ba1f04d3f933d8df\");\n",
+       "    if (outputDiv.id !== \"altair-viz-5b7fdbfabf0f43f7a801e09e02344cbf\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-5b7fdbfabf0f43f7a801e09e02344cbf\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -405,14 +367,14 @@
        "        .catch(showError)\n",
        "        .then(() => displayChart(vegaEmbed));\n",
        "    }\n",
-       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"layer\": [{\"mark\": \"point\", \"encoding\": {\"color\": {\"field\": \"epitope\", \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation\", \"format\": \".3f\", \"type\": \"quantitative\"}, {\"field\": \"epitope\", \"type\": \"nominal\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation\", \"type\": \"quantitative\"}}}, {\"mark\": {\"type\": \"line\", \"size\": 2.5}, \"encoding\": {\"color\": {\"field\": \"epitope\", \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation\", \"format\": \".3f\", \"type\": \"quantitative\"}, {\"field\": \"epitope\", \"type\": \"nominal\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation\", \"type\": \"quantitative\"}}, \"title\": \"predicted vs. true beta coefficients\", \"transform\": [{\"loess\": \"correlation\", \"on\": \"num_variants\", \"groupby\": [\"epitope\"]}]}], \"data\": {\"name\": \"data-8fa183cb18c401fde52b62ba9119802d\"}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.17.0.json\", \"datasets\": {\"data-8fa183cb18c401fde52b62ba9119802d\": [{\"epitope\": \"class 1\", \"correlation\": 0.20308261097478575, \"num_variants\": \"500\"}, {\"epitope\": \"class 2\", \"correlation\": 0.0816961973937197, \"num_variants\": \"500\"}, {\"epitope\": \"class 3\", \"correlation\": 0.09175371786950463, \"num_variants\": \"500\"}, {\"epitope\": \"class 1\", \"correlation\": 0.0241523798559658, \"num_variants\": \"1000\"}, {\"epitope\": \"class 2\", \"correlation\": 0.6194656714239446, \"num_variants\": \"1000\"}, {\"epitope\": \"class 3\", \"correlation\": 0.14208162210170724, \"num_variants\": \"1000\"}, {\"epitope\": \"class 1\", \"correlation\": 0.08596332200874099, \"num_variants\": \"2500\"}, {\"epitope\": \"class 2\", \"correlation\": 0.7668959438558444, \"num_variants\": \"2500\"}, {\"epitope\": \"class 3\", \"correlation\": 0.5936929574345301, \"num_variants\": \"2500\"}, {\"epitope\": \"class 1\", \"correlation\": 0.23168196636972116, \"num_variants\": \"5000\"}, {\"epitope\": \"class 2\", \"correlation\": 0.8099853337682328, \"num_variants\": \"5000\"}, {\"epitope\": \"class 3\", \"correlation\": 0.6779346673176389, \"num_variants\": \"5000\"}, {\"epitope\": \"class 1\", \"correlation\": 0.7582495642268794, \"num_variants\": \"10000\"}, {\"epitope\": \"class 2\", \"correlation\": 0.9308485198950717, \"num_variants\": \"10000\"}, {\"epitope\": \"class 3\", \"correlation\": 0.8915241645696071, \"num_variants\": \"10000\"}, {\"epitope\": \"class 1\", \"correlation\": 0.8298801310531777, \"num_variants\": \"20000\"}, {\"epitope\": \"class 2\", \"correlation\": 0.9659975232864269, \"num_variants\": \"20000\"}, {\"epitope\": \"class 3\", \"correlation\": 0.9364289344892847, \"num_variants\": \"20000\"}, {\"epitope\": \"class 1\", \"correlation\": 0.8828352439294088, \"num_variants\": \"30000\"}, {\"epitope\": \"class 2\", \"correlation\": 0.9729747874088035, \"num_variants\": \"30000\"}, {\"epitope\": \"class 3\", \"correlation\": 0.94969585001127, \"num_variants\": \"30000\"}]}}, {\"mode\": \"vega-lite\"});\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"layer\": [{\"mark\": \"point\", \"encoding\": {\"color\": {\"field\": \"epitope\", \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation\", \"format\": \".3f\", \"type\": \"quantitative\"}, {\"field\": \"epitope\", \"type\": \"nominal\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation\", \"type\": \"quantitative\"}}}, {\"mark\": {\"type\": \"line\", \"size\": 2.5}, \"encoding\": {\"color\": {\"field\": \"epitope\", \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation\", \"format\": \".3f\", \"type\": \"quantitative\"}, {\"field\": \"epitope\", \"type\": \"nominal\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation\", \"type\": \"quantitative\"}}, \"title\": \"predicted vs. true beta coefficients\", \"transform\": [{\"loess\": \"correlation\", \"on\": \"num_variants\", \"groupby\": [\"epitope\"]}]}], \"data\": {\"name\": \"data-df6bee3dc8410de22cab87c576160fa5\"}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.17.0.json\", \"datasets\": {\"data-df6bee3dc8410de22cab87c576160fa5\": [{\"epitope\": \"class 1\", \"correlation\": 0.07218205218117564, \"num_variants\": \"1000\"}, {\"epitope\": \"class 2\", \"correlation\": 0.6193939130573645, \"num_variants\": \"1000\"}, {\"epitope\": \"class 3\", \"correlation\": 0.14283525086211518, \"num_variants\": \"1000\"}, {\"epitope\": \"class 1\", \"correlation\": 0.07485263251345038, \"num_variants\": \"2500\"}, {\"epitope\": \"class 2\", \"correlation\": 0.7631061270887695, \"num_variants\": \"2500\"}, {\"epitope\": \"class 3\", \"correlation\": 0.6008243893232577, \"num_variants\": \"2500\"}, {\"epitope\": \"class 1\", \"correlation\": 0.18918520043065443, \"num_variants\": \"5000\"}, {\"epitope\": \"class 2\", \"correlation\": 0.8092677701815656, \"num_variants\": \"5000\"}, {\"epitope\": \"class 3\", \"correlation\": 0.6447936408706487, \"num_variants\": \"5000\"}, {\"epitope\": \"class 1\", \"correlation\": 0.7542994577416787, \"num_variants\": \"10000\"}, {\"epitope\": \"class 2\", \"correlation\": 0.9297299063893005, \"num_variants\": \"10000\"}, {\"epitope\": \"class 3\", \"correlation\": 0.8895653185132256, \"num_variants\": \"10000\"}, {\"epitope\": \"class 1\", \"correlation\": 0.8304737362222792, \"num_variants\": \"20000\"}, {\"epitope\": \"class 2\", \"correlation\": 0.9658589813965135, \"num_variants\": \"20000\"}, {\"epitope\": \"class 3\", \"correlation\": 0.9364439836455705, \"num_variants\": \"20000\"}, {\"epitope\": \"class 1\", \"correlation\": 0.8906166297185629, \"num_variants\": \"30000\"}, {\"epitope\": \"class 2\", \"correlation\": 0.9728646538300674, \"num_variants\": \"30000\"}, {\"epitope\": \"class 3\", \"correlation\": 0.9493930496177673, \"num_variants\": \"30000\"}]}}, {\"mode\": \"vega-lite\"});\n",
        "</script>"
       ],
       "text/plain": [
        "alt.LayerChart(...)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +431,7 @@
     "\n",
     "max_ic90 = 50\n",
     "for size in library_sizes:\n",
-    "    model = fit_models[f'noisy_[0.25, 1, 4]conc_3muts_{size}vars']\n",
+    "    model = fit_models[f'{size}variants']\n",
     "    \n",
     "    ic90s = (exact_data[['aa_substitutions', 'IC90']]\n",
     "         .assign(IC90=lambda x: x['IC90'].clip(upper=max_ic90))\n",
@@ -494,19 +456,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-16fd5a82f29d43c29e9136a0464b21f8\"></div>\n",
+       "<div id=\"altair-viz-f26369fdc12b4031bbcdb3b07904d122\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-16fd5a82f29d43c29e9136a0464b21f8\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-16fd5a82f29d43c29e9136a0464b21f8\");\n",
+       "    if (outputDiv.id !== \"altair-viz-f26369fdc12b4031bbcdb3b07904d122\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-f26369fdc12b4031bbcdb3b07904d122\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -548,14 +510,14 @@
        "        .catch(showError)\n",
        "        .then(() => displayChart(vegaEmbed));\n",
        "    }\n",
-       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"layer\": [{\"mark\": \"point\", \"encoding\": {\"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation\", \"format\": \".3f\", \"type\": \"quantitative\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation\", \"type\": \"quantitative\"}}}, {\"mark\": {\"type\": \"line\", \"size\": 2.5}, \"encoding\": {\"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation\", \"format\": \".3f\", \"type\": \"quantitative\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation\", \"type\": \"quantitative\"}}, \"title\": \"predicted vs. true IC90\", \"transform\": [{\"loess\": \"correlation\", \"on\": \"num_variants\"}]}], \"data\": {\"name\": \"data-c5a62cacdeb270655a4b728735e31bef\"}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.17.0.json\", \"datasets\": {\"data-c5a62cacdeb270655a4b728735e31bef\": [{\"correlation\": 0.8735735805219821, \"num_variants\": \"500\"}, {\"correlation\": 0.9047712110540711, \"num_variants\": \"1000\"}, {\"correlation\": 0.9470096880271011, \"num_variants\": \"2500\"}, {\"correlation\": 0.9553321071623498, \"num_variants\": \"5000\"}, {\"correlation\": 0.9869475208464767, \"num_variants\": \"10000\"}, {\"correlation\": 0.9945123477448078, \"num_variants\": \"20000\"}, {\"correlation\": 0.9966442796637273, \"num_variants\": \"30000\"}]}}, {\"mode\": \"vega-lite\"});\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"layer\": [{\"mark\": \"point\", \"encoding\": {\"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation\", \"format\": \".3f\", \"type\": \"quantitative\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation\", \"type\": \"quantitative\"}}}, {\"mark\": {\"type\": \"line\", \"size\": 2.5}, \"encoding\": {\"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation\", \"format\": \".3f\", \"type\": \"quantitative\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation\", \"type\": \"quantitative\"}}, \"title\": \"predicted vs. true IC90\", \"transform\": [{\"loess\": \"correlation\", \"on\": \"num_variants\"}]}], \"data\": {\"name\": \"data-0c4db5e4f79981648641d8934b4f922d\"}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.17.0.json\", \"datasets\": {\"data-0c4db5e4f79981648641d8934b4f922d\": [{\"correlation\": 0.9047602052241313, \"num_variants\": \"1000\"}, {\"correlation\": 0.9476120671799916, \"num_variants\": \"2500\"}, {\"correlation\": 0.9546141373522637, \"num_variants\": \"5000\"}, {\"correlation\": 0.9866242259717083, \"num_variants\": \"10000\"}, {\"correlation\": 0.9946314692709969, \"num_variants\": \"20000\"}, {\"correlation\": 0.996683899105829, \"num_variants\": \"30000\"}]}}, {\"mode\": \"vega-lite\"});\n",
        "</script>"
       ],
       "text/plain": [
        "alt.LayerChart(...)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +545,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our simulation experiments reveal that library size is an important factor. Having greater than 10,000 (functional) multiply-mutated variants led to higher correlation between predicted and true beta coefficients for each epitope."
+    "Library size is an important factor. Having greater than 10,000 (functional) multiply-mutated variants led to higher correlation between predicted and true beta coefficients for each epitope, particularly the subdominant epitopes."
    ]
   }
  ],
