minor wording changes

--- a/notebooks/concentration_set.ipynb
+++ b/notebooks/concentration_set.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Choosing sera concentrations"
+    "# Sera concentrations"
    ]
   },
   {
@@ -20,7 +20,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import time\n",
     "import os\n",
     "import pickle\n",
     "\n",
@@ -34,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have simulated noisy data measured at 6 sera concentrations. Each variant in this dataset contains 3 mutations on average and generally spans a wide range of escape fractions across the different sera concentrations."
+    "We have simulated a noisy DMS library measured at 6 sera concentrations. The variants in this library were simulated to contain a Poisson-distributed number of mutations, with 3 mutations on average. The variants also generally span a wide range of escape fractions across the different sera concentrations."
    ]
   },
   {
@@ -337,6 +336,8 @@
    ],
    "source": [
     "conc_sets = [[0.125], [0.25], [0.5], [1], [2], [4]]\n",
+    "\n",
+    "# Make a directory to house pickled models\n",
     "os.makedirs('fit_polyclonal_models', exist_ok=True)\n",
     "       \n",
     "def fit_polyclonal(conc_set):\n",
@@ -361,27 +362,29 @@
     "                                         ),\n",
     "                                     data_mut_escape_overlap='fill_to_data',\n",
     "                                 )\n",
-    "    start = time.time()\n",
     "    poly_abs.fit()\n",
-    "    return poly_abs, time.time() - start\n",
+    "    return poly_abs\n",
     "\n",
     "# Store all fit models in a dictionary for future lookup\n",
     "fit_models = {}\n",
     "\n",
     "for s in conc_sets:\n",
-    "    # keys for models\n",
+    "    # These are the keys for fit models\n",
     "    model_string = f'noisy_{s}conc_3muts'\n",
     "\n",
-    "    # if model has already been fit, load pickled model and add to fit_models. Otherwise, fit model.\n",
+    "    # If the pickled model exists in fit_polyclonal_models directory,\n",
+    "    # load it and add to fit_models dictionary\n",
     "    if os.path.exists(f'fit_polyclonal_models/{model_string}.pkl') is True:\n",
     "        model = pickle.load(open(f'fit_polyclonal_models/{model_string}.pkl', 'rb'))\n",
     "        fit_models.update({model_string : model})\n",
     "        print(f\"Model with {s} was already fit.\")\n",
     "    else:\n",
-    "        model, time_elapsed = fit_polyclonal(s)\n",
+    "        # Else, fit a model using fit_polyclonal(), save it to the\n",
+    "        # fit_polyclonal_models directory, and add to fit_models dictionary\n",
+    "        model = fit_polyclonal(s)\n",
     "        fit_models.update({model_string : model})\n",
-    "        pickle.dump(model, open(f'fit_polyclonal_models/noisy_{s}conc_3muts.pkl', 'wb'))\n",
-    "        print(f\"Model with {s} fit in {time_elapsed:.1f} seconds.\")  "
+    "        pickle.dump(model, open(f'fit_polyclonal_models/{model_string}.pkl', 'wb'))\n",
+    "        print(f\"Model with {s} fit and saved.\")  "
    ]
   },
   {
@@ -437,12 +440,12 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-86300e42b84a498a8479d8e292d98d73\"></div>\n",
+       "<div id=\"altair-viz-5c580f1a69bd40c684bd03e44cbdbb3c\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-86300e42b84a498a8479d8e292d98d73\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-86300e42b84a498a8479d8e292d98d73\");\n",
+       "    if (outputDiv.id !== \"altair-viz-5c580f1a69bd40c684bd03e44cbdbb3c\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-5c580f1a69bd40c684bd03e44cbdbb3c\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -512,7 +515,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The best correlation between predicted and true beta coefficients is observed when the wildtype virus is potently neutralized. However, the correlation is reduced when the concentration is too low (i.e., many mutated variants escape and even some wildtype) and too high (i.e., few mutated variants escape).  "
+    "The best correlation between predicted and true beta coefficients is observed when the wildtype virus is potently neutralized. However, the correlation is lower when the concentration is too low (i.e., many mutated variants escape and even some wildtype) or too high (i.e., few mutated variants escape).  "
    ]
   },
   {
@@ -586,12 +589,12 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-2f52bf94de774bb496906b5e06765be3\"></div>\n",
+       "<div id=\"altair-viz-0b65634834b7494197bca0f6cea23994\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-2f52bf94de774bb496906b5e06765be3\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-2f52bf94de774bb496906b5e06765be3\");\n",
+       "    if (outputDiv.id !== \"altair-viz-0b65634834b7494197bca0f6cea23994\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-0b65634834b7494197bca0f6cea23994\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -697,19 +700,22 @@
     "             [0.125,0.25,0.5,1,2,4]]\n",
     "\n",
     "for s in conc_sets:\n",
-    "    # keys for models\n",
+    "    # These are the keys for fit models\n",
     "    model_string = f'noisy_{s}conc_3muts'\n",
-    "    \n",
-    "    # if model has already been fit, load pickled model and add to fit_models. Otherwise, fit model.\n",
+    "\n",
+    "    # If the pickled model exists in fit_polyclonal_models directory,\n",
+    "    # load it and add to fit_models dictionary\n",
     "    if os.path.exists(f'fit_polyclonal_models/{model_string}.pkl') is True:\n",
     "        model = pickle.load(open(f'fit_polyclonal_models/{model_string}.pkl', 'rb'))\n",
     "        fit_models.update({model_string : model})\n",
     "        print(f\"Model with {s} was already fit.\")\n",
     "    else:\n",
-    "        model, time_elapsed = fit_polyclonal(s)\n",
+    "        # Else, fit a model using fit_polyclonal(), save it to the\n",
+    "        # fit_polyclonal_models directory, and add to fit_models dictionary\n",
+    "        model = fit_polyclonal(s)\n",
     "        fit_models.update({model_string : model})\n",
-    "        pickle.dump(model, open(f'fit_polyclonal_models/noisy_{s}conc_3muts.pkl', 'wb'))\n",
-    "        print(f\"Model with {s} fit in {time_elapsed:.1f} seconds.\")  "
+    "        pickle.dump(model, open(f'fit_polyclonal_models/{model_string}.pkl', 'wb'))\n",
+    "        print(f\"Model with {s} fit and saved.\")  "
    ]
   },
   {
@@ -721,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,19 +767,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-0164a47488b249e29fbef753372b387c\"></div>\n",
+       "<div id=\"altair-viz-5bde091be14d4cd5a5043d5b827abc12\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-0164a47488b249e29fbef753372b387c\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-0164a47488b249e29fbef753372b387c\");\n",
+       "    if (outputDiv.id !== \"altair-viz-5bde091be14d4cd5a5043d5b827abc12\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-5bde091be14d4cd5a5043d5b827abc12\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -822,7 +828,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +852,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that the performance of models fit on data with 2-3 concentrations is nearly indistinguishable from that of the model fit on data with all 6 concentrations. Additionally, adding a concentration or two does lead to a modest gain in inference, especially for the class 1 epitope which is expected to be the hardest to predict since it has the lowest wildtype activity."
+    "We see that the performance of models fit on data with 2-3 concentrations is nearly indistinguishable from that of the model fit on data with all 6 concentrations. Additionally, adding a concentration or two does lead to a modest improvement in the correlation, especially for the class 1 epitope which is expected to be the hardest to predict since it has the lowest wildtype activity."
    ]
   },
   {
@@ -858,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,19 +898,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-019ebf76151143f1a3f9f3d28fe8e738\"></div>\n",
+       "<div id=\"altair-viz-7570a399ff9e4e3dba62ba437adf02b4\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-019ebf76151143f1a3f9f3d28fe8e738\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-019ebf76151143f1a3f9f3d28fe8e738\");\n",
+       "    if (outputDiv.id !== \"altair-viz-7570a399ff9e4e3dba62ba437adf02b4\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-7570a399ff9e4e3dba62ba437adf02b4\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -953,7 +959,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,14 +994,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. One concentration can be sufficient, but needs to be chosen carefully. Ideally, choose a concentration that is potent enough (ex. `IC99.9`) to neutralize all wildtype viruses, but not potent enough to neutralize large majority of all the variants. "
+    "1. Choose a single concentration that is potent enough (ex. `IC99.9`) to neutralize all wildtype viruses, but not potent enough to neutralize large majority of all the variants. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Adding a second or third concentration can help refine inference of true mutation effects, especially for the most subdominant epitopes. These should be chosen to be 2-4 fold higher or lower than the first concentration."
+    "2. Adding a second or third concentration can then help refine inference of true mutation effects, especially for the most subdominant epitopes. These should be chosen to be 2-4 fold higher or lower than the first concentration."
    ]
   }
  ],
@@ -1015,7 +1021,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
