minor wording changes

--- a/notebooks/mutation_rate.ipynb
+++ b/notebooks/mutation_rate.ipynb
@@ -20,9 +20,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import time\n",
-    "import os\n",
-    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import altair as alt\n",
@@ -204,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +223,7 @@
     "\n",
     "for n in avg_mut_rates:\n",
     "    # key name for model\n",
-    "    model_string = f'noisy_[0.25, 1, 4]conc_{n}muts'\n",
+    "    model_string = f'avg{n}muts'\n",
     "    \n",
     "    poly_abs = polyclonal.Polyclonal(data_to_fit=noisy_data.query(f\"library == 'avg{n}muts'\"),\n",
     "                                     activity_wt_df=pd.DataFrame.from_records(\n",
@@ -259,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +265,7 @@
     "                          'mutation_rate' : []})\n",
     "\n",
     "for n in avg_mut_rates:\n",
-    "    model = fit_models[f'noisy_[0.25, 1, 4]conc_{n}muts']\n",
+    "    model = fit_models[f'avg{n}muts']\n",
     "\n",
     "    mut_escape_pred = (\n",
     "        pd.read_csv('RBD_mut_escape_df.csv')\n",
@@ -295,19 +292,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-c60463f556734273854f81a0839b84a7\"></div>\n",
+       "<div id=\"altair-viz-e888b233076b4b1b98c74af7bb3b1d6f\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-c60463f556734273854f81a0839b84a7\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-c60463f556734273854f81a0839b84a7\");\n",
+       "    if (outputDiv.id !== \"altair-viz-e888b233076b4b1b98c74af7bb3b1d6f\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-e888b233076b4b1b98c74af7bb3b1d6f\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -356,7 +353,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +401,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
